--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "flash",
+  "name": "flash-css",
   "version": "0.0.1",
   "description": "Flash is a free and open source CSS framework which implements Material Design.",
   "main": "flash.scss",
   "devDependencies": {
-    "laravel-mix": "^6.0.3",
-    "postcss": "^8.1.14",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.30.0",
-    "sass-loader": "^8.0.2"
+    "node-sass": "^5.0.0"
   },
   "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "build": "node-sass --output-style expanded --source-map true src/flash.scss css/flash.css",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
